Install + configure DoctrineMigrationsMultipleDatabaseBundle

--- a/.env
+++ b/.env
@@ -27,4 +27,5 @@ APP_SECRET=90b8b29bdd1babbcaafde6a1e2b7b15b
 # DATABASE_URL="mysql://db_user:db_password@localhost:3306/db_name?serverVersion=8.0"
 # DATABASE_URL="postgresql://symfony:ChangeMe@localhost:5432/app?serverVersion=14&charset=utf8"
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL_SECOND="sqlite:///%kernel.project_dir%/var/data2.db"
 ###< doctrine/doctrine-bundle ###
