--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -4,24 +4,47 @@ parameters:
   # environment variables are not available yet.
   # You should not need to change this value.
   env(DATABASE_URL): ''
+  env(DATABASE_URL_SECOND): ''
 
 doctrine:
   dbal:
-    url: '%env(resolve:DATABASE_URL)%'
+    default_connection: default
+    connections:
+      default:
+        url: '%env(resolve:DATABASE_URL)%'
+        default_table_options:
+          charset: utf8
+          collate: utf8_unicode_ci
+      second:
+        url: '%env(resolve:DATABASE_URL_SECOND)%'
+        default_table_options:
+          charset: utf8
+          collate: utf8_unicode_ci
 
-    # IMPORTANT: You MUST configure your server version,
-    # either here or in the DATABASE_URL env var (see .env file)
-    #server_version: '13'
   orm:
-    auto_generate_proxy_classes: true
-    naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-    auto_mapping: true
-    mappings:
-      App:
-        is_bundle: false
-        dir: '%kernel.project_dir%/src/Entity'
-        prefix: 'App\Entity'
-        alias: App
+    auto_generate_proxy_classes: false # true on BB-Api
+    default_entity_manager: default
+    entity_managers:
+      default:
+        connection: default
+        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        mappings:
+          App:
+            is_bundle: false
+            type: attribute
+            dir: '%kernel.project_dir%/src/Entity/'
+            prefix: 'App\Entity'
+            alias: App
+      second:
+        connection: second
+        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        mappings:
+          Second:
+            is_bundle: false
+            type: attribute
+            dir: '%kernel.project_dir%/src/Entity2/'
+            prefix: 'App\Entity2'
+            alias: Second
 
 when@prod:
   doctrine:
