--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,10 +3,10 @@ security:
     # Our user class and the algorithm we'll use to encode passwords
     # 'auto' means to let Symfony choose the best possible password hasher (Argon2 or Bcrypt)
     # https://symfony.com/doc/current/security.html#c-encoding-passwords
-    App\Entity\User: 'auto'
+    App\Entity\Main\User: 'auto'
   providers:
     database_users:
-      entity: { class: App\Entity\User, property: username }
+      entity: { class: App\Entity\Main\User, property: username }
 
   firewalls:
     dev:
@@ -53,7 +53,7 @@ when@test:
       # important to generate secure password hashes. In tests however, secure hashes
       # are not important, waste resources and increase test times. The following
       # reduces the work factor to the lowest possible values.
-      App\Entity\User:
+      App\Entity\Main\User:
         algorithm: auto
         cost: 4 # Lowest possible value for bcrypt
         time_cost: 3 # Lowest possible value for argon
