--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,9 @@
     "symfony/validator": "*",
     "symfony/web-link": "*",
     "symfony/yaml": "*",
-    "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0",
-    "vich/uploader-bundle": "1.*"
+    "twig/extra-bundle": "^3.3",
+    "twig/twig": "^3.3",
+    "vich/uploader-bundle": "2.*"
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "*",
@@ -98,7 +98,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "6.2.*"
+      "require": "6.3.*"
     }
   },
   "authors": [
