--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,10 +3,10 @@ security:
     # Our user class and the algorithm we'll use to encode passwords
     # 'auto' means to let Symfony choose the best possible password hasher (Argon2 or Bcrypt)
     # https://symfony.com/doc/current/security.html#c-encoding-passwords
-    App\Entity\Main\User: 'auto'
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
   providers:
     database_users:
-      entity: { class: App\Entity\Main\User, property: username }
+      entity: { class: App\Entity\User, property: username }
 
   firewalls:
     dev:
@@ -23,12 +23,13 @@ security:
         enable_csrf: true
         default_target_path: dossierList
       entry_point: 'form_login'
-      logout:
-        path: app_logout
       remember_me:
         secret:   '%kernel.secret%'
         lifetime: 604800 # 1 week in seconds
         path:     /
+      logout:
+        path: app_logout
+        target: dossierList
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -53,8 +54,11 @@ when@test:
       # important to generate secure password hashes. In tests however, secure hashes
       # are not important, waste resources and increase test times. The following
       # reduces the work factor to the lowest possible values.
-      App\Entity\Main\User:
+      Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
         algorithm: auto
         cost: 4 # Lowest possible value for bcrypt
         time_cost: 3 # Lowest possible value for argon
         memory_cost: 10 # Lowest possible value for argon
+    firewalls:
+      main:
+        http_basic: ~
