--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "doctrine/orm": "2.*",
     "knplabs/knp-paginator-bundle": "*",
     "symfony/asset": "*",
+    "symfony/clock": "*",
     "symfony/console": "*",
     "symfony/dotenv": "*",
     "symfony/expression-language": "*",
@@ -98,7 +99,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "6.3.*"
+      "require": "6.4.*"
     }
   },
   "authors": [
