--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,22 +1,16 @@
-parameters:
-  # Adds a fallback DATABASE_URL if the env var is not set.
-  # This allows you to run cache:warmup even if your
-  # environment variables are not available yet.
-  # You should not need to change this value.
-  env(DATABASE_URL): ''
-  env(DATABASE_URL_SECOND): ''
-
 doctrine:
   dbal:
     default_connection: main
     connections:
       main:
         url: '%env(resolve:DATABASE_URL)%'
+        profiling_collect_backtrace: '%kernel.debug%'
         default_table_options:
           charset: utf8
           collate: utf8_unicode_ci
       second:
         url: '%env(resolve:DATABASE_URL_SECOND)%'
+        profiling_collect_backtrace: '%kernel.debug%'
         default_table_options:
           charset: utf8
           collate: utf8_unicode_ci
@@ -24,10 +18,13 @@ doctrine:
   orm:
     auto_generate_proxy_classes: true
     default_entity_manager: main
+    enable_lazy_ghost_objects: true
     entity_managers:
       main:
         connection: main
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        report_fields_where_declared: true
+        validate_xml_mapping: true
         mappings:
           App:
             is_bundle: false
@@ -38,6 +35,8 @@ doctrine:
       second:
         connection: second
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        report_fields_where_declared: true
+        validate_xml_mapping: true
         mappings:
           Second:
             is_bundle: false
@@ -50,6 +49,7 @@ when@prod:
   doctrine:
     orm:
       auto_generate_proxy_classes: false
+      proxy_dir: '%kernel.build_dir%/doctrine/orm/Proxies'
       query_cache_driver:
         type: pool
         pool: doctrine.system_cache_pool
